--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>titulo nuevo! modificado</h1>
+    <form action="button" value="enviar">
+
+        
+    </form>
 </body>
 </html>
