--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>titulo nuevo! modificado</h1>
-    <form action="button" value="enviar">
-
+    <form action="#" method="GET">
+<input type="text" name="firstname" id="fistname">
+<input type="button" value="Enviar">
         
     </form>
 </body>
