--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>titulo nuevo! modificado</h1>
     <form action="#" method="GET">
 <input type="text" name="firstname" id="fistname">
+<input type="text" name="lastname" id="lastname">
 <input type="button" value="Enviar">
         
     </form>
