--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>titulo nuevo! modificado</h1>
     <form action="#" method="GET">
 <input type="text" name="firstname" id="fistname">
-<input type="text" name="lastname" id="lastname">
+<input type="text" lastname="lastname" id="lastname">
+<input type="text" lastname2="lastname" id="lastname2">
 
 <input type="button" value="Enviar">
         
