--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <form action="#" method="GET">
 <input type="text" name="firstname" id="fistname">
 <input type="text" lastname="lastname" id="lastname">
-<input type="text" lastname2="lastname" id="lastname2">
+<input type="text" lastname2="lastname" id="lastname2<input type="text" name="lastname" id="lastname2">">
 
 <input type="button" value="Enviar">
         
