--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <input type="text" lastname2="lastname" id="lastname2">
 <input type="text" name="lastname" id="lastname3">
 
+se hace el otro cambio
+
 <input type="button" value="Enviar">
         
     </form>
