--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>titulo nuevo! modificado</h1>
     <form action="button" value="enviar">
+    <img src="" alt="test image">
 
         
     </form>
