se realizo un cambio de accion

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>titulo nuevo! modificado</h1>
     <form action="button" value="enviar">
 
+    <h1>cambio de accion</h1>
+
         
     </form>
 </body>
